fix z-index

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -623,6 +623,7 @@ ul#clock li {
   position: absolute;
   top: 2px;
   right: 2px;
+  z-index: 5;
 }
 
 .bars {
